--- a/cmsplugin_filer_folder/templates/cmsplugin_filer_folder/folder.html
+++ b/cmsplugin_filer_folder/templates/cmsplugin_filer_folder/folder.html
@@ -1,5 +1,6 @@
 {% load i18n thumbnail sekizai_tags %}
 {% addtoblock "css" %}<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}cmsplugin_filer_folder/css/slideshow.css" media="screen, projection" />{% endaddtoblock "css" %}
+{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}cms/js/libs/jquery.min.js"></script>{% endaddtoblock "js" %}
 {% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}cmsplugin_filer_folder/js/jquery.cycle2.min-2.1.1.js"></script>{% endaddtoblock "js" %}
 
 {% firstof object.title object.folder.name  %}
