Corrected typo in HTML comment.

--- a/cmsplugin_filer_folder/templates/cmsplugin_filer_folder/folder.html
+++ b/cmsplugin_filer_folder/templates/cmsplugin_filer_folder/folder.html
@@ -52,5 +52,5 @@ jQuery(document).ready(function ($) {
             <img src="{% thumbnail image.file 200x200 crop="True" upscale="True" %}">
         {% endfor %}
     </div>
-    <!-- end: gallery -->
+    <!-- end: slideshow -->
 {% endif %}
