Added 'galleria' class to slideshow container.

--- a/cmsplugin_filer_folder/templates/cmsplugin_filer_folder/folder.html
+++ b/cmsplugin_filer_folder/templates/cmsplugin_filer_folder/folder.html
@@ -47,7 +47,7 @@ jQuery(document).ready(function ($) {
     </div>
 {% else %}
     <!-- start: slideshow -->
-    <div class="cmsplugin_filer_folder_slideshow" id="folder_{{ object.id }}">
+    <div class="cmsplugin_filer_folder_slideshow galleria" id="folder_{{ object.id }}">
         {% for image in folder_images %}
             <img src="{% thumbnail image.file 200x200 crop="True" upscale="True" %}">
         {% endfor %}
