--- a/cmsplugin_filer_folder/templates/cmsplugin_filer_folder/folder.html
+++ b/cmsplugin_filer_folder/templates/cmsplugin_filer_folder/folder.html
@@ -5,9 +5,12 @@
 {% addtoblock "js" %}
 <script type="text/javascript">
 //<![CDATA[
+Galleria.loadTheme('{{ STATIC_URL }}cmsplugin_filer_folder/js/galleria/themes/classic/galleria.classic.min.js');
+Galleria.run('.galleria');
 jQuery(document).ready(function ($) {
-    $('.cmsplugin_filer_folder_slideshow').cycle({
-        fx: 'fade'
+    Galleria.configure({
+        imageCrop: true,
+        transition: 'fade',
     });
 });
 //]]>
