--- a/cmsplugin_filer_folder/static/cmsplugin_filer_folder/js/galleria/themes/cmsplugin_filer/galleria.cmsplugin_filer.css
+++ b/cmsplugin_filer_folder/static/cmsplugin_filer_folder/js/galleria/themes/cmsplugin_filer/galleria.cmsplugin_filer.css
@@ -1,4 +1,4 @@
-/* Galleria Classic Theme 2012-08-07 | https://raw.github.com/aino/galleria/master/LICENSE | (c) Aino */
+/* Galleria cmsplugin_filer Theme 2012-08-07 | https://raw.github.com/aino/galleria/master/LICENSE | (c) Aino */
 
 #galleria-loader{height:1px!important}
 
@@ -59,7 +59,7 @@
     right: 10px;
     z-index: 2;
     display: none;
-    background: url(classic-loader.gif) no-repeat 2px 2px;
+    background: url(cmsplugin_filer-loader.gif) no-repeat 2px 2px;
 }
 .galleria-info {
     width: 50%;
@@ -212,7 +212,7 @@
 .galleria-info-close,
 .galleria-image-nav-left,
 .galleria-image-nav-right {
-    background-image: url(classic-map.png);
+    background-image: url(cmsplugin_filer-map.png);
     background-repeat: no-repeat;
 }
 .galleria-container.videoplay .galleria-info,
