--- a/cmsplugin_filer_folder/static/cmsplugin_filer_folder/js/galleria/themes/cmsplugin_filer/galleria.cmsplugin_filer.css
+++ b/cmsplugin_filer_folder/static/cmsplugin_filer_folder/js/galleria/themes/cmsplugin_filer/galleria.cmsplugin_filer.css
@@ -1,11 +1,10 @@
-/* Galleria cmsplugin_filer Theme 2012-08-07 | https://raw.github.com/aino/galleria/master/LICENSE | (c) Aino */
+/* Galleria cmsplugin_filer Theme 2014-02-01 | https://raw.github.com/eliasp/cmsplugin_filer/master/LICENSE | (c) Elias Probst */
 
 #galleria-loader{height:1px!important}
 
 .galleria-container {
     position: relative;
     overflow: hidden;
-    background: #000;
 }
 .galleria-container img {
     -moz-user-select: none;
@@ -35,9 +34,7 @@
 .galleria-thumbnails .galleria-image {
     height: 40px;
     width: 60px;
-    background: #000;
     margin: 0 5px 0 0;
-    border: 1px solid #000;
     float: left;
     cursor: pointer;
 }
@@ -51,7 +48,6 @@
     z-index: 1;
 }
 .galleria-loader {
-    background: #000;
     width: 20px;
     height: 20px;
     position: absolute;
@@ -69,7 +65,6 @@
     position: absolute;
 }
 .galleria-info-text {
-    background-color: #000;
     padding: 12px;
     display: none;
     /* IE7 */ zoom:1;
@@ -113,7 +108,6 @@
     width: 20px;
     height: 20px;
     cursor: pointer;
-    background-color: #000;
 }
 .notouch .galleria-info-link:hover {
     opacity: 1;
